package org.example.entity;

public record FacultyAndDepartment(Faculty faculty, Department department) {
}
