package org.example.entity;

public record FacultyAndDepartmentNames(String facultyName, String departmentName) {
}
