@startuml

entity University { 
    -id : int
    -name : String
    -facultys : List<Faculty>
    -schedules : List<Schedule>
    +getFaculties() : void
    +addFaculty(faculty : Faculty) : void
    +removeFaculty(faculty : Faculty) : void
    +addSchedule(schedule : Schedule) : void 
    +removeSchedule(schedule : Schedule) : void
    +getSchedules() : List<Schedule>
    +findFacultyByName(name : String) : Faculty
    +getName() : String 
    +getId() : int 
}

entity Classroom {
    -id : int
    -capacity : int
    +getId() : int
    +getCapcity() : int
    +toString() : String
}

entity Department {
    -id : int
    -name : String 
    -teacherIds : List<Teacher>
    -studentIds : List<Student>
    -subjectIds : List<Subject>
    +addTeacher(teacher : Teacher) : void
    +removeTeacher(teacher : Teacher) : void
    +addStudent(student : Student) : void
    +removeStudent(student : Student) : void
    +addSubject(subject : Subject) : void
    +removeSubject(subject : Subject) : void
    +getId() : int
    +getName() : String 
    +getTeacherIds() : List
    +getStudentIds() : List
    +getSubjectIds() : List
    +findSubjectById(id : int) 
    +equals(o : Object)
    +hashCode() : int
}

entity Faculty {
    -name : String 
    -departmentIds : List<Department>
    +getName() : String 
    +addDepartment(department : Departament) : void
    +removeDepartment(department : Departament) : void
    +getDepartmentIds() : List<Department>
    +getTeacherById(id : int) : Teacher
    +findDepartment(name : String) : Department
    +findDepartment(id : int) : Department
}

class FacultyAndDepartment {
    +faculty : Faculty
    +department : Departament
}

class FacultyAndDepartmentNames {
    +facultyName : String 
    +departmentName : String
}

class Grade {
    +subject : Subject
    +value : int
}

entity Group {
    -id : int 
    -studentIds : List<Student>
    +getId() : int
    +addStudent(student : Student) : void
    +removeStudent(student : Student) : void 
    +getStudens() : List<Student>
    +equals(o : Object)
    +hashCode() : int
    +toString() : String
}

abstract class Person {
    -firstName : String 
    -secondName : String
    +getFirstName() : String 
    +getSecondName() : String 
    +hashCode() : int
    +toString() : String
}

entity Schedule {
    -id : int 
    -dateTimeFormatter : DateTimeFormatter
    -subject : Subject
    -teacher : Teacher
    -group : Group 
    -classroom : Classroom 
    -date : LocalDateTime
    +getId() : int 
    +getSubject() : Subject 
    +getTeacher() : Teacher 
    +getGroup() : Group
    +getClassroom() : Classroom 
    +getDate() : LocalDateTime
    +toString() : String
    +hashCode() : int
    +toString() : String
}

class Student {
    -id : int 
    -group : Group
    -subjectAssessment : Map<Subject, Integer>
    +getId() : int 
    +getGroup() : Group 
    +setGroup(group : Group) : Group 
    +getSubjectAssessment() : Map<Subject, Integer>
    +enrollToSubject(subject : Subject) : void 
    +assignGrade(grade : Grade) : void
    +calculateAverageGrade() : double
    +hashCode() : int
    +toString() : String
}

class Subject {
    -id : int 
    -description : String 
    -teacher : Teacher
    -students : List<Student>
    +getId() : int
    +setDescription(description : String) : void
    +getDescription() : String 
    +setTeacher(teacher : Teacher) : void 
    +getTeacher() : Teacher 
    +getId() : int 
    +getDescription() : String 
    +addStudent(student : Student) : void 
    +getStudents() : List<Student>
    +hashCode() : int
    +toString() : String
    +toString() : String
}

class Teacher {
    -id : int
    -subjects : List<Subject>
    +getId() : int 
    +getSubjects() : List<Subject>
    +assignToSubject(subject : Subject) : void 
    +assignGrade(sudent : Student, subject : Subject, value : int) : void
    +hashCode() : int
    +toString() : String
    +toString() : String
}

class FacultyAndDepartmentNames {
    +facultyName : String
    +departmentName : String
}

class UniversityService {
    -University : University
    +createFaculty(name : String) : void
    +createDepartment(departmentId : int, departmentName : String, facultyName : String) : void
    +createTeacher(id : int, firstName : String, lastName : String, facultyAndDepartmentNames : FacultyAndDepartmentNames) : void
    +createSubject(id : int, description : String,facultyAndDepartmentNames : FacultyAndDepartmentNames, teacherId : int) : void
    +createStudent(id : int, firstName : String, lastName : String, facultyAndDepartmentNames : FacultyAndDepartmentNames, groupId : int) : void
    +enrollStudent(studentId : int, subjectId : int) : void    
    +assignGrade(teacherId : int, studentId : int, subjectId : int, grade : int) : void 
    +calculateAverageGrade(studentId : int, clazz : Class<T>) :  <T extends Number> T
    +createSchedule(id : int, subjectId : int, teacherId : int, groupId : int , classId : int, classCapacity : int) : void 
    +displaySchedules() : void
    -findGroupById(id : int) : Group
    -findTeacherById(id : int) : Teacher
    -findStudentById(id : int) : Student
    -findSubjectById(id : int) : Subject
    -findFaculty(String facultyName) : Faculty
    -findFacultyAndDepartment(facultyAndDepartment : FacultyAndDepartmentNames) : FacultyAndDepartment
}

interface Service {
    +createFaculty(name : String) : void
    +createDepartment(departmentId : int, departmentName : String, facultyName : String) : void
    +createTeacher(id : int, firstName : String, lastName : String, facultyAndDepartmentNames : FacultyAndDepartmentNames) : void
    +createSubject(id : int, description : String,facultyAndDepartmentNames : FacultyAndDepartmentNames, teacherId : int) : void
    +createStudent(id : int, firstName : String, lastName : String, facultyAndDepartmentNames : FacultyAndDepartmentNames, groupId : int) : void
    +enrollStudent(studentId : int, subjectId : int) : void    
    +assignGrade(teacherId : int, studentId : int, subjectId : int, grade : int) : void 
    +calculateAverageGrade(studentId : int, clazz : Class<T>) :  <T extends Number> T
    +createSchedule(id : int, subjectId : int, teacherId : int, groupId : int , classId : int, classCapacity : int) : void 
    +displaySchedules() : void
}

class DemoScenario {
    +Run() : void
}


Departament o-- Teacher
Departament o-- Student
Departament o-- Subject
Faculty *-- Departament
FacultyAndDepartment *-- Departament
FacultyAndDepartment *-- Faculty
Grade *-- Subject
Group o-- Student
Schedule o-- Subject
Schedule o-- Teacher
Schedule o-- Group
Schedule *-- Classroom
Person <|-- Student
Person <|-- Teacher
Student o-- Subject
Student o-- Group
Subject o-- Teacher
Subject o-- Student 
Teacher o-- Subject
University *-- Faculty
University *-- Schedule
Service <|.. UniversityService
UniversityService *-- University

@enduml
